worked on w06 assignment
