# Week 4/cse341-code-student-L04-team-start/routes/index.js
@@ -1,16 +1,17 @@
-const routes = require('express').Router();
-const temple = require('./temple');
+const routes = require("express").Router();
+const temple = require("./temple");
+const validation = require("../helper/validate");
 
 routes.use("/", require("./swagger"));
-routes.use('/temples', temple);
+routes.use("/temples", temple);
 routes.use(
-    '/',
-    (docData = (req, res) => {
-        let docData = {
-            documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs',
-        };
-        res.send(docData);
-    })
+  "/",
+  (docData = (req, res) => {
+    let docData = {
+      documentationURL: "https://nathanbirch.github.io/nathan-byui-api-docs",
+    };
+    res.send(docData);
+  })
 );
 
 module.exports = routes;
